--- a/javascript-dom/newLearning/learning5/index.html
+++ b/javascript-dom/newLearning/learning5/index.html
@@ -9,30 +9,31 @@
 <body>
     <div class="calculator">
         <div class="header">
+            <input type="text" id="operator" disabled>
             <input type="text" id="prompt" disabled value="0">
         </div>
         <div class="body">
             <div class="number">
-                <input type="button" id="7" value="7">
-                <input type="button" id="8" value="8">
-                <input type="button" id="9" value="9">
-                <input type="button" id="4" value="4">
-                <input type="button" id="5" value="5">
-                <input type="button" id="6" value="6">
-                <input type="button" id="1" value="1">
-                <input type="button" id="2" value="2">
-                <input type="button" id="3" value="3">
-                <input type="button" id="dot" value=".">
-                <input type="button" id="0" value="0">
-                <input type="button" id="00" value="00">
+                <input type="button" class="data-number" id="7" value="7">
+                <input type="button" class="data-number" id="8" value="8">
+                <input type="button" class="data-number" id="9" value="9">
+                <input type="button" class="data-number" id="4" value="4">
+                <input type="button" class="data-number" id="5" value="5">
+                <input type="button" class="data-number" id="6" value="6">
+                <input type="button" class="data-number" id="1" value="1">
+                <input type="button" class="data-number" id="2" value="2">
+                <input type="button" class="data-number" id="3" value="3">
+                <input type="button" class="data-number" id="dot" value=".">
+                <input type="button" class="data-number" id="0" value="0">
+                <input type="button" class="data-number" id="00" value="00">
             </div>
             <div class="operator">
-                <input type="button" id="delete" value="CE">
-                <input type="button" id="divide" value="/">
-                <input type="button" id="times" value="*">
-                <input type="button" id="minus" value="-">
-                <input type="button" id="plus" value="+">
-                <input type="button" id="equal" value="=">
+                <input type="button" class="operation-operator" id="delete" value="CE">
+                <input type="button" class="operation-operator" id="divide" value="/">
+                <input type="button" class="operation-operator" id="times" value="*">
+                <input type="button" class="operation-operator" id="minus" value="-">
+                <input type="button" class="operation-operator" id="plus" value="+">
+                <input type="button" class="operation-operator" id="equal" value="=">
             </div>
         </div>
     </div>
